tests/ui-nightly/try_transmute_ref-dst-not-immutable-tryfrombytes.stderr
error[E0277]: the trait bound `NotZerocopy: TryFromBytes` is not satisfied
 --> tests/ui-nightly/try_transmute_ref-dst-not-immutable-tryfrombytes.rs:17:33
  |
 17 | ...rom_bytes: Result<&NotZerocopy, _> = try_transmute_ref!(&AU16(0));
    |               ^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `TryFromBytes` is not implemented for `NotZerocopy`
   --> tests/ui-nightly/../include.rs
    |
 15 |     pub struct NotZerocopy<T = ()>(pub T);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(TryFromBytes)]` to `NotZerocopy`
    = help: the following other types implement trait `TryFromBytes`:
              ()
              (A, B)
              (A, B, C)
              (A, B, C, D)
              (A, B, C, D, E)
              (A, B, C, D, E, F)
              (A, B, C, D, E, F, G)
              (A, B, C, D, E, F, G, H)
            and $N others
note: required by a bound in `ValidityError`
   --> src/error.rs
    |
    | pub struct ValidityError<Src, Dst: ?Sized + TryFromBytes> {
    |                                             ^^^^^^^^^^^^ required by this bound in `ValidityError`
    = note: the full name for the type has been written to '$DIR/target/by-toolchain/nightly/tests/trybuild/x86_64-unknown-linux-gnu/debug/deps/$CRATE-b6fc3661a24bca63.long-type-4861859598034278994.txt'
    = note: consider using `--verbose` to print the full type name to the console

error[E0277]: the trait bound `NotZerocopy: TryFromBytes` is not satisfied
 --> tests/ui-nightly/try_transmute_ref-dst-not-immutable-tryfrombytes.rs:17:59
  |
 17 | ...py, _> = try_transmute_ref!(&AU16(0));
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `TryFromBytes` is not implemented for `NotZerocopy`
   --> tests/ui-nightly/../include.rs
    |
 15 |     pub struct NotZerocopy<T = ()>(pub T);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(TryFromBytes)]` to `NotZerocopy`
    = help: the following other types implement trait `TryFromBytes`:
              ()
              (A, B)
              (A, B, C)
              (A, B, C, D)
              (A, B, C, D, E)
              (A, B, C, D, E, F)
              (A, B, C, D, E, F, G)
              (A, B, C, D, E, F, G, H)
            and $N others
note: required by a bound in `zerocopy::util::macro_util::try_transmute_ref`
   --> src/util/macro_util.rs
    |
    | pub fn try_transmute_ref<Src, Dst>(src: &Src) -> Result<&Dst, ValidityErr...
    |        ----------------- required by a bound in this function
...
    |     Dst: TryFromBytes + Immutable,
    |          ^^^^^^^^^^^^ required by this bound in `try_transmute_ref`
    = note: the full name for the type has been written to '$DIR/target/by-toolchain/nightly/tests/trybuild/x86_64-unknown-linux-gnu/debug/deps/$CRATE-b6fc3661a24bca63.long-type-4861859598034278994.txt'
    = note: consider using `--verbose` to print the full type name to the console
    = note: this error originates in the macro `try_transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: Immutable` is not satisfied
 --> tests/ui-nightly/try_transmute_ref-dst-not-immutable-tryfrombytes.rs:17:59
  |
 17 | ...py, _> = try_transmute_ref!(&AU16(0));
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Immutable` is not implemented for `NotZerocopy`
   --> tests/ui-nightly/../include.rs
    |
 15 |     pub struct NotZerocopy<T = ()>(pub T);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(Immutable)]` to `NotZerocopy`
    = help: the following other types implement trait `Immutable`:
              &T
              &mut T
              ()
              (A, B)
              (A, B, C)
              (A, B, C, D)
              (A, B, C, D, E)
              (A, B, C, D, E, F)
            and $N others
note: required by a bound in `zerocopy::util::macro_util::try_transmute_ref`
   --> src/util/macro_util.rs
    |
    | pub fn try_transmute_ref<Src, Dst>(src: &Src) -> Result<&Dst, ValidityErr...
    |        ----------------- required by a bound in this function
...
    |     Dst: TryFromBytes + Immutable,
    |                         ^^^^^^^^^ required by this bound in `try_transmute_ref`
    = note: the full name for the type has been written to '$DIR/target/by-toolchain/nightly/tests/trybuild/x86_64-unknown-linux-gnu/debug/deps/$CRATE-b6fc3661a24bca63.long-type-4861859598034278994.txt'
    = note: consider using `--verbose` to print the full type name to the console
    = note: this error originates in the macro `try_transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: TryFromBytes` is not satisfied
 --> tests/ui-nightly/try_transmute_ref-dst-not-immutable-tryfrombytes.rs:17:59
  |
 17 | ...py, _> = try_transmute_ref!(&AU16(0));
    |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `TryFromBytes` is not implemented for `NotZerocopy`
   --> tests/ui-nightly/../include.rs
    |
 15 |     pub struct NotZerocopy<T = ()>(pub T);
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    = note: Consider adding `#[derive(TryFromBytes)]` to `NotZerocopy`
    = help: the following other types implement trait `TryFromBytes`:
              ()
              (A, B)
              (A, B, C)
              (A, B, C, D)
              (A, B, C, D, E)
              (A, B, C, D, E, F)
              (A, B, C, D, E, F, G)
              (A, B, C, D, E, F, G, H)
            and $N others
note: required by a bound in `ValidityError`
   --> src/error.rs
    |
    | pub struct ValidityError<Src, Dst: ?Sized + TryFromBytes> {
    |                                             ^^^^^^^^^^^^ required by this bound in `ValidityError`
    = note: the full name for the type has been written to '$DIR/target/by-toolchain/nightly/tests/trybuild/x86_64-unknown-linux-gnu/debug/deps/$CRATE-b6fc3661a24bca63.long-type-4861859598034278994.txt'
    = note: consider using `--verbose` to print the full type name to the console
    = note: this error originates in the macro `try_transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
